cloth brush makes holes in my mesh #75347

Closed
opened 2020-04-03 15:56:20 +02:00 by grant abbitt · 14 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: 6f4dbb661f
Worked: (newest version of Blender that worked as expected)

Cloth brush suddenly started making holes on the mesh.
2020-04-05_04-29-05.mp4

Exact steps for others to reproduce the error
Cloth brush error.blend

Open this blend file and do some strokes.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-04-03 00:24, hash: `6f4dbb661f` Worked: (newest version of Blender that worked as expected) Cloth brush suddenly started making holes on the mesh. [2020-04-05_04-29-05.mp4](https://archive.blender.org/developer/F8449715/2020-04-05_04-29-05.mp4) **Exact steps for others to reproduce the error** [Cloth brush error.blend](https://archive.blender.org/developer/F8449717/Cloth_brush_error.blend) Open this blend file and do some strokes.
Author

Added subscriber: @gabbitt

Added subscriber: @gabbitt

#75397 was marked as duplicate of this issue

#75397 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Umm.. you missed the video ?
Also, upload a simple blend file with steps to redo the bug

Umm.. you missed the video ? Also, upload a simple blend file with steps to redo the bug
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

2020-04-03 14-51-10.mp4 Thats strange but maybe this will work. i'll sort the blend file shortly

[2020-04-03 14-51-10.mp4](https://archive.blender.org/developer/F8450053/2020-04-03_14-51-10.mp4) Thats strange but maybe this will work. i'll sort the blend file shortly
Author

blend file sculpt bug.rar

blend file [sculpt bug.rar](https://archive.blender.org/developer/F8450191/sculpt_bug.rar)
Member

See https://developer.blender.org/T75397#903692

It stops if you reset the weird brush settings

Please check and retry

See https://developer.blender.org/T75397#903692 > It stops if you reset the weird brush settings Please check and retry
Member

Added subscribers: @NelsonNAS, @unwave

Added subscribers: @NelsonNAS, @unwave

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @iss

Added subscriber: @iss

I changed file from another report, because it's better example

I changed file from another report, because it's better example

This issue was referenced by 05dd9ca06c

This issue was referenced by 05dd9ca06cc13d0847dbd6115b26df9484019c1e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-05-13 02:56:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75347
No description provided.